# DevHome_Relocator

./: CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md
.github/workflows/: release.yml
src/: main.rs
src/config/: env_manager.rs  mod.rs
src/core/: mod.rs  relocation_target.rs
src/i18n/: mod.rs
src/mover/: file_mover.rs  junction.rs  mod.rs
src/scanner/: detector.rs  mod.rs  size_analyzer.rs
src/ui/: main_window.rs  mod.rs  table.rs
src/utils/: disk_usage.rs  logger.rs  mod.rs
